# ccr-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PULL_REQUEST.md  README.md  README.md.bak  build.rs  config.example.json  config.gemini.json  docker-compose.yml  test_config.json  test_reasoning.rs
benchmarks/: README.md  config_mock.json  mock_sse_backend.py  run_stress_test.sh  stress_sse_streams.py
deploy/: ccr-rust.service  com.ccr.rust.plist
docs/: claude_code_api_research.md  claude_code_setup.md  cli.md  codex_api_research.md  codex_setup.md  configuration.md  debug_capture.md  deployment.md  gemini-integration.md  index.md  kimi_setup.md  lessons_learned.md  observability.md  presets.md  qwen-coding-plan.md  streaming_incremental_design.md  token_optimization.md  troubleshooting.md  zai_minimax_setup.md
k8s/: configmap.yaml  deployment.yaml  service.yaml
monitoring/: README.md  prometheus-snippet.yml
scripts/: ccr_provider_smoke.py
src/: config.rs  dashboard.rs  debug_capture.rs  gp_router.rs  lib.rs  main.rs  metrics.rs  proxy.rs  ratelimit.rs  router.rs  routing.rs  sse.rs  transformer.rs  turn_capture.rs
src/config/: mod.rs  types.rs
src/frontend/: codex.rs  (+3 more)
tasks/: ccr_rust_v02.yaml  ccr_rust_v03_production.yaml  ccr_rust_v10_full.yaml
tests/: integration_claude_code.rs  integration_codex.rs  integration_codex_openai_stream.rs  integration_codex_stream.rs  integration_responses.rs  lib.rs  reasoning_normalization_test.rs  test_mcp_daemon.rs  test_routing.rs  test_shutdown.rs  test_stream_error_detection.rs
(+44 files in other folders)
