[package]
name = "ccr-rust"
version = "0.1.0"
edition = "2021"
authors = ["RESMP-DEV"]
description = "Claude Code Router in Rust - high-throughput SSE proxy for agent swarms"
license = "MIT"
repository = "https://github.com/resmp-dev/ccr-rust"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
reqwest = { version = "0.12", features = ["stream", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.7"
futures = "0.3"
prometheus = "0.13"
lazy_static = "1.5"
clap = { version = "4.5", features = ["derive"] }
shellexpand = "3.1"
tokio-stream = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
